--- a/NutraBioticsBackend/Views/OrderHeaders/ConsultaOrdenes.cshtml
+++ b/NutraBioticsBackend/Views/OrderHeaders/ConsultaOrdenes.cshtml
@@ -10,7 +10,7 @@
 
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-
+<a href="http://ntb-bog-srv-002/Reports/Pages/Report.aspx?ItemPath=%2fE10Produccion%2freports%2fReportBackendNutraBiotics%2freportOrder">Export</a>
 
 @Html.Grid(Model).Named("OrdersGrid").Columns(columns =>
 {
